--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -10,12 +10,24 @@
     enabled: true
     state: started
 
+- name: Ensure firewalld is installed
+  package:
+    name: firewalld
+    state: present
+
+- name: Ensure firewalld is enabled and running
+  service:
+    name: firewalld
+    enabled: true
+    state: started
+
 - name: Open firewall for HTTP and HTTPS
   ansible.posix.firewalld:
     service: "{{ item }}"
     permanent: true
     state: enabled
     immediate: true
+    zone: "{{ nginx_firewalld_zone | default('public') }}"
   loop:
     - http
     - https
